Adds Whatsapp button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <li><a href="#sobre" class="js-scroll-trigger">About</a></li>
         <li><a href="#habilidades" class="js-scroll-trigger">Skills</a></li>
         <li><a href="#experiencia" class="js-scroll-trigger">Experience</a></li>
-         <li><a href="#portfolio" class="js-scroll-trigger">Portfolio</a></li>
+         <li><a href="#portfolio" class="js-scroll-trigger">Projects</a></li>
         <li><a href="#contato" class="js-scroll-trigger">Contact</a></li>
       </ul>
 
@@ -91,8 +91,7 @@
               <!--Desenvolveu sistemas de apoio, APIs, websites e aplicativos para o Governo do Estado de Alagoas. Já atuou como Engenheiro de Software em empresas no Brasil e nos Estados Unidos.</p>-->
             <!--<hr>-->
             <p>
-                Hello, I'm passionate about solving modern day problems through technology. I have about 7 years of
-programming experience and solving real life problems. Feel free to leave me a message if you need your project done! My mission is just to make life easier and happier.
+              I’m a problem-solver with over 10 years of experience in programming, driven by a passion for using technology to tackle modern challenges. My mission is to create solutions that make life easier, more efficient, and ultimately happier. Whether it's through innovative software or optimizing processes, I'm here to bring your project ideas to life.
             </p>
             <!--<p>Entre em contato para orçamento de projetos, sites e aplicativos.</p>-->
             <!-- <p> I'm a Full Stack Web Developer from Brazil that started dev about 3 years ago.
@@ -100,9 +99,16 @@ programming experience and solving real life problems. Feel free to leave me a m
                     I built IS, websites and mobile apps for the government and i've worked on some brazilian and american agencies</p> -->
           </div>
           <p class="center">
-            <a href="https://docs.google.com/document/d/135b5J4Ju_CEQRQ-WmJrzrdQa0RNckUHMlQBI3TqIQ9w/edit?usp=sharing" target="_blank" class="waves-effect waves-light btn btn-flat blue-theme-dark darken-2 white-text"><i class="material-icons left">business</i> Resume</a>
-            <a href="#contato" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text  hide-on-small-only	"><i class="material-icons left">email</i> Contact</a>
-            <a target="_blank" href="https://telegram.me/mrnywton" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text"><i class="material-icons left">chat</i> Telegram</a>
+            <a href="https://docs.google.com/document/d/135b5J4Ju_CEQRQ-WmJrzrdQa0RNckUHMlQBI3TqIQ9w/edit?usp=sharing" target="_blank" class="waves-effect waves-light btn btn-flat blue-theme-dark darken-2 white-text"><i class="material-icons left">business</i> Curriculum (CV)</a>
+            <!-- <a href="#contato" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text  hide-on-small-only	"><i class="material-icons left">email</i> Contact</a> -->
+            <a target="_blank" href="https://wa.me/+5582991295880?text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento." class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text">
+              <span style="display: flex; justify-content: center; align-items: center;">
+                <img src="./img/icons/whatsapp.png" width="24px" alt="">
+                <span style="margin-left: 10px;">
+                  Whatsapp Chat
+                </span>
+              </span>
+              </a>
           </p>
           <br><br>
 
@@ -132,26 +138,18 @@ programming experience and solving real life problems. Feel free to leave me a m
           <div class="skill-bar col m10 wow fadeIn a1 animated" data-wow-delay="0.1s" style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
             <h5 class="white-text"><i class="material-icons">card_travel</i>  Tech </h5>
             <span>- Solve people and business problems through technology.</span>
-            <br/><span>- HTML / CSS</span>
-            <br/><span>- JavaScript (including most recently ES notation and also the most popular frameworks (VueJS, React, React Native, Angular, jQuery))</span>
-            <br/><span>- Flux Architecture</span>
-            <br/><span>- Rest API Architecture</span>
-            <br/><span>- NodeJS (plays once)</span>
+            <br/><span>- Front-End with Angular, Vue, React</span>
+            <br/><span>- Back-End JavaScript / Typescript with NodeJS and Express</span>
+            <br/><span>- API Architecture</span>
             <br/><span>- PHP</span>
-            <br/><span>- Ruby (also Ruby on Rails)</span>
+            <br/><span>- Ruby on Rails (Fullstack)</span>
             <br/><span>- Java</span>
             <br/><span>- Android / IOS (Java, React Native, Ionic)</span>
-            <br/><span>- Design Patterns</span>
-            <br/><span>- Agile Culture</span>
-            <br/><span>- Docker</span>
-            <br/><span>- Git</span>
-            <br/><span>- Amazon Services (S3 / EC2...)</span>
-            <br/><span>- TDD and BDD (Test Driven Design / Behaviour Driven Design)</span>
-            <br/><span>- DDD (Domain Driven Design)</span>
+            <br/><span>- Amazon Services</span>
+            <br/><span>- Test Driven</span>
             <br/><span>- Unix / GNU Universe</span>
-            <br/><span>- MongoDB and NOSQL</span>
-            <br/><span>- PostgreSQL</span>
-            <br/><span>- MySQL</span>
+            <br>
+            - Databases: MongoDB, PostgreSQL, MySQL, NoSQL
           </div>
 
         </div>
@@ -161,16 +159,12 @@ programming experience and solving real life problems. Feel free to leave me a m
           <div class="skill-bar col m10 wow fadeIn a2 animated" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeIn;">
             <h5 class="white-text"><i class="material-icons">accessibility</i> Personal </h5>
             <span>- Team Culture</span>
-            <br/><span>- Motivation and Energy</span>
-            <br/><span>- Get Things Done</span>
-            <br/><span>- Self-Discipline</span>
             <br/><span>- Fast Learning</span>
-            <br/><span>- Self-Taught English Language</span>
+            <br/><span>- Self-Taught English Speaker</span>
             <br/><span>- Self-Taught Developer</span>
             <br/><span>- Self-Taught Stock Market Investor</span>
             <br/><span>- Self-Taught Musician</span>
-            <br/><span>- Remote Culture</span>
-            <br/><span>- Father of Two</span>
+            <br/><span>- Father of Three</span>
             <br><br>
             <h5 class="white-text"><i class="material-icons">accessibility</i> Aditional </h5>
             <span>- Software Patent Owner as Writer</span>
@@ -295,7 +289,7 @@ programming experience and solving real life problems. Feel free to leave me a m
       <div class="card timeline-content">
         <div class="card-content">
           <a href=""><h4>Software Engineer<br> @Jaya Tech</h4></a>
-          <span>Since october 2020 </span>
+          <span>October 2020 </span>
           <p>Software Engnineeri, work together with remote team from US (PWNHealth) </p>
         </div>
         <div class="card-reveal">
@@ -306,6 +300,22 @@ programming experience and solving real life problems. Feel free to leave me a m
       <div class="timeline-badge blue-theme white-text"><i class="material-icons">work</i></div>
     </div>
 
+    <div class="timeline-event">
+      <div class="card timeline-content">
+        <div class="card-content">
+          <a href=""><h4>Software Developer <br> @Vagas.com</h4></a>
+          <span>2023 / 2024</span>
+          <p> Software developer. Key Technologies: Rails, Elixir, React / Windows Server / SQLServer
+          </p>
+        </div>
+        <div class="card-reveal">
+          <span class="card-title grey-text text-darken-4"><i class="material-icons right">close</i></span>
+          <p></p>
+        </div>
+      </div>
+      <div class="timeline-badge red white-text"><i class="material-icons">work</i></div>
+    </div>
+
 
   </div>
 </div>
@@ -314,7 +324,7 @@ programming experience and solving real life problems. Feel free to leave me a m
 
 <!-- Gallery -->
 <div class="section-title center-align" id="portfolio">
-  <h4><i class="material-icons">card_travel</i> Portfolio</h4>
+  <h4><i class="material-icons">card_travel</i> Projects</h4>
 </div>
 <div id="portfolio" class="cx gray">
   <div class="db">
