--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <title>Nywton Barros - Resume</title>
 
+  <!-- Font Lilita One -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lilita+One&display=swap" rel="stylesheet">
+
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
@@ -38,11 +43,11 @@
 <div class="navbar-fixed">
   <nav class="blue-theme-dark darken-2" role="navigation">
     <div class="nav-wrapper container">
-      <a class=" light">
-        <img class="nyw-logo hide-on-small-only" src="./images/keyboardsvg.svg"></img>
+      <a class="light">
+        <img width="20px" class="nyw-logo hide-on-small-only" src="./images/keyboardsvg.svg"></img>
       </a>
-      <a id="logo-container" href="#" class="brand-logo light">
-      Nywton Barros
+      <a id="logo-container" href="#" class="brand-logo">
+        Tech-Solver $_>
       </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#sobre" class="js-scroll-trigger">About</a></li>
@@ -73,7 +78,7 @@
 
     <div class="row">
       <div class="col s12">
-        <div class="card z-depth-4">
+        <div class="card z-depth-1">
           <div class="card-content">
             <div class="profile-img">
               <img class="responsive-img circle center-align" src="img/profile.jpg">
