Change profile picure, hidden old projects

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Nywton Barros - Resume</title>
+  <title>Dev Resume</title>
 
   <!-- Font Lilita One -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -53,7 +53,7 @@
         <li><a href="#sobre" class="js-scroll-trigger">About</a></li>
         <li><a href="#habilidades" class="js-scroll-trigger">Skills</a></li>
         <li><a href="#experiencia" class="js-scroll-trigger">Experience</a></li>
-         <li><a href="#portfolio" class="js-scroll-trigger">Projects</a></li>
+         <!-- <li><a href="#portfolio" class="js-scroll-trigger">Projects</a></li> -->
         <li><a href="#contato" class="js-scroll-trigger">Contact</a></li>
       </ul>
 
@@ -81,7 +81,7 @@
         <div class="card z-depth-1">
           <div class="card-content">
             <div class="profile-img">
-              <img class="responsive-img circle center-align" src="img/profile.jpg">
+              <img class="responsive-img circle center-align" src="img/profile2.png">
             </div>
             <br><br><br>
             <h2>Nywton Barros</h2>
@@ -326,107 +326,110 @@
 </div>
 
 <br><br>
-
-<!-- Gallery -->
-<div class="section-title center-align" id="portfolio">
-  <h4><i class="material-icons">card_travel</i> Projects</h4>
-</div>
-<div id="portfolio" class="cx gray">
-  <div class="db">
-    <div class="b e">
-      <!--Doe+-->
-      <div class="d hx hf gu gallery-item gallery-expand ce polygon">
-        <div class="gallery-curve-wrapper">
-          <a class="gallery-cover gray">
-            <img class="responsive-img" src="img/portfolio/doemais/campanha.jpeg" alt="placeholder" crossOrigin="anonymous">
-          </a>
-          <div class="gallery-header">
-            <span>Doe+</span>
-          </div>
-          <div class="gallery-body">
-            <div class="title-wrapper">
-              <h3>Doe+</h3>
-              <span class="gk">2015</span>
-            </div>
-            <p class="fi">
-                O Doe+ é um aplicativo desenvolvido em parceria com a Secretaria da Ciência, Tecnologia e Inovação (Secti), Instituto Federal de Alagoas (Ifal) e Secretaria de Estado da Saúde (Sesau) para Android e IOS que permite o agendamento de doações e vizualização de campanhas de doação de sangue. Também é possível visualizar o histórico de doações que foram agendadas pelo app e outras informações como: quem pode doar, requisitos de saúde, idade e outras informações.
-            </p>
-            <p class="fi">
-              O projeto ajudou a reduzir os baixos níveis dos bancos de sangue da Hemorrede do Estado de Alagoas no ano de seu lançamento.
-            </p>
-            <h4>Notícias relacionadas</h4>
-            <ul>
-              <li><a href="http://www.agenciaalagoas.al.gov.br/noticia/item/1172-doe-aplicativo-que-ajuda-nos-estoques-de-sangue-ganha-versao-para-ios" target="_blank">http://www.agenciaalagoas.al.gov.br/noticia/item/1172-doe-aplicativo-que-ajuda-nos-estoques-de-sangue-ganha-versao-para-ios</a></li>
-              <li><a href="https://www2.ifal.edu.br/noticias/aplicativo-doe-desenvolvido-no-ifal-maceio-ja-esta-disponivel-para-baixar" target="_blank">https://www2.ifal.edu.br/noticias/aplicativo-doe-desenvolvido-no-ifal-maceio-ja-esta-disponivel-para-baixar</a></li>
-            </ul>
-
-            <div class="carousel-wrapper">
-              <div class="t">
-                <a class="carousel-item" href="full-header.html#one!"><img src="img/portfolio/doemais/applicativo.png" crossOrigin="anonymous"></a>
-                <a class="carousel-item" href="full-header.html#two!"><img src="img/portfolio/doemais/banner.jpg" crossOrigin="anonymous"></a>
-                <a class="carousel-item" href="full-header.html#three!"><img src="img/portfolio/doemais/banner2.jpg" crossOrigin="anonymous"></a>
-                <!--<a class="carousel-item" href="full-header.html#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?9078412610821087350" crossOrigin="anonymous"></a>-->
-                <!--<a class="carousel-item" href="full-header.html#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?9078412610821087350" crossOrigin="anonymous"></a>-->
-              </div>
-            </div>
-          </div>
-          <div class="gallery-action">
-            <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">favorite</i></a>
-          </div>
-        </div>
-      </div>
-
-      <!--Sgplan-->
-      <div class="d hx hf gu gallery-item gallery-expand ce polygon">
-        <div class="gallery-curve-wrapper">
-          <a class="gallery-cover gray">
-            <img class="responsive-img" src="img/portfolio/sgplan/principal.PNG" alt="placeholder" crossOrigin="anonymous">
-          </a>
-          <div class="gallery-header">
-            <span>SGPLAN</span>
-          </div>
-          <div class="gallery-body">
-            <div class="title-wrapper">
-              <h3>Sgplan</h3>
-              <span class="gk">2016-2017</span>
-            </div>
-            <p class="fi">
-              Um plano estratégico tem como objetivo principal fornecer direcionamento comum a ser seguido por toda a organização, identificando
-              responsabilidades, garantindo alinhamento e oferecendo meios para medição do sucesso da estratégia de modo focado, visando o alcance dos
-              objetivos institucionais e a maximização dos resultados. Com o objetivo de oferecer maior transparência e maior eficiência na gestão do plano,
-              bem como alinhas os objetivos da TI com os objetivos estratégicos da SECTI, foi desenvolvido
-              um sistema web que auxilar os gestores e a governança, no acompanhamento das ações e atividades do Plano 2017( marcos de acompanhamento e
-              evidências), o SGPLAN.
-            </p>
-            <p class="fi">
-              A ferramenta disponibiliza informações rápidas e objetivas sobre as ações e seus respectivos status de entrega, relatórios estão sendo implementados conforme a necessidade dos gestores. Outras funcionalidades como um DashBoard com indicadores estão sendo construídas. O sistema foi construído utilizando a linguagem Ruby v. 2.3.0, e Banco de Dados PostgreSQL v. 9.6. O front-end da aplicação foi construído utilizando HTML, CSS e JavaScript. O sistema está hospedado em uma máquina virtual utilizando CENTOS no datacenter do ITEC. Para acessar o sistema basta acessar o link http://sgplan.secti.al.gov.br
-            </p>
-            <h4>Notícias relacionadas</h4>
-            <ul>
-              <li><a href="http://www.agenciaalagoas.al.gov.br/noticia/item/18830-palmeira-dos-indios-implanta-sistema-inovador-desenvolvido-pela-secti" target="_blank">http://www.agenciaalagoas.al.gov.br/noticia/item/18830-palmeira-dos-indios-implanta-sistema-inovador-desenvolvido-pela-secti</a></li>
-              <li><a href="http://www.agenciaalagoas.al.gov.br/noticia/item/15182-sistema-de-gestao-facilita-monitoramento-das-acoes-do-governo" target="_blank">http://www.agenciaalagoas.al.gov.br/noticia/item/15182-sistema-de-gestao-facilita-monitoramento-das-acoes-do-governo</a></li>
-            </ul>
-
-            <div class="carousel-wrapper">
-              <div class="t">
-                <a class="carousel-item" href="full-header.html#one!"><img src="img/portfolio/sgplan/banner1.PNG" crossOrigin="anonymous"></a>
-                <a class="carousel-item" href="full-header.html#two!"><img src="img/portfolio/sgplan/banner2.PNG" crossOrigin="anonymous"></a>
-                <a class="carousel-item" href="full-header.html#three!"><img src="img/portfolio/sgplan/banner3.PNG" crossOrigin="anonymous"></a>
-                <a class="carousel-item" href="full-header.html#four!"><img src="img/portfolio/sgplan/banner5.jpg"></a>
-                <a class="carousel-item" href="full-header.html#four!"><img src="img/portfolio/sgplan/banner6.jpg"></a>
-              </div>
-            </div>
-          </div>
-          <div class="gallery-action">
-            <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">favorite</i></a>
-          </div>
-        </div>
-      </div>
-    </div>
-
+<!-- Projects -->
+<div style="display: none !important;">
+  <div class="section-title center-align" id="portfolio">
+    <h4><i class="material-icons">card_travel</i> Projects</h4>
   </div>
+  <div id="portfolio" class="cx gray">
+    <div class="db">
+      <div class="b e">
+        <!--Doe+-->
+        <div class="d hx hf gu gallery-item gallery-expand ce polygon">
+          <div class="gallery-curve-wrapper">
+            <a class="gallery-cover gray">
+              <img class="responsive-img" src="img/portfolio/doemais/campanha.jpeg" alt="placeholder" crossOrigin="anonymous">
+            </a>
+            <div class="gallery-header">
+              <span>Doe+</span>
+            </div>
+            <div class="gallery-body">
+              <div class="title-wrapper">
+                <h3>Doe+</h3>
+                <span class="gk">2015</span>
+              </div>
+              <p class="fi">
+                  O Doe+ é um aplicativo desenvolvido em parceria com a Secretaria da Ciência, Tecnologia e Inovação (Secti), Instituto Federal de Alagoas (Ifal) e Secretaria de Estado da Saúde (Sesau) para Android e IOS que permite o agendamento de doações e vizualização de campanhas de doação de sangue. Também é possível visualizar o histórico de doações que foram agendadas pelo app e outras informações como: quem pode doar, requisitos de saúde, idade e outras informações.
+              </p>
+              <p class="fi">
+                O projeto ajudou a reduzir os baixos níveis dos bancos de sangue da Hemorrede do Estado de Alagoas no ano de seu lançamento.
+              </p>
+              <h4>Notícias relacionadas</h4>
+              <ul>
+                <li><a href="http://www.agenciaalagoas.al.gov.br/noticia/item/1172-doe-aplicativo-que-ajuda-nos-estoques-de-sangue-ganha-versao-para-ios" target="_blank">http://www.agenciaalagoas.al.gov.br/noticia/item/1172-doe-aplicativo-que-ajuda-nos-estoques-de-sangue-ganha-versao-para-ios</a></li>
+                <li><a href="https://www2.ifal.edu.br/noticias/aplicativo-doe-desenvolvido-no-ifal-maceio-ja-esta-disponivel-para-baixar" target="_blank">https://www2.ifal.edu.br/noticias/aplicativo-doe-desenvolvido-no-ifal-maceio-ja-esta-disponivel-para-baixar</a></li>
+              </ul>
+  
+              <div class="carousel-wrapper">
+                <div class="t">
+                  <a class="carousel-item" href="full-header.html#one!"><img src="img/portfolio/doemais/applicativo.png" crossOrigin="anonymous"></a>
+                  <a class="carousel-item" href="full-header.html#two!"><img src="img/portfolio/doemais/banner.jpg" crossOrigin="anonymous"></a>
+                  <a class="carousel-item" href="full-header.html#three!"><img src="img/portfolio/doemais/banner2.jpg" crossOrigin="anonymous"></a>
+                  <!--<a class="carousel-item" href="full-header.html#four!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-cave.jpg?9078412610821087350" crossOrigin="anonymous"></a>-->
+                  <!--<a class="carousel-item" href="full-header.html#five!"><img src="https://cdn.shopify.com/s/files/1/1775/8583/t/1/assets/geometric-grapefruit.jpg?9078412610821087350" crossOrigin="anonymous"></a>-->
+                </div>
+              </div>
+            </div>
+            <div class="gallery-action">
+              <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">favorite</i></a>
+            </div>
+          </div>
+        </div>
+  
+        <!--Sgplan-->
+        <div class="d hx hf gu gallery-item gallery-expand ce polygon">
+          <div class="gallery-curve-wrapper">
+            <a class="gallery-cover gray">
+              <img class="responsive-img" src="img/portfolio/sgplan/principal.PNG" alt="placeholder" crossOrigin="anonymous">
+            </a>
+            <div class="gallery-header">
+              <span>SGPLAN</span>
+            </div>
+            <div class="gallery-body">
+              <div class="title-wrapper">
+                <h3>Sgplan</h3>
+                <span class="gk">2016-2017</span>
+              </div>
+              <p class="fi">
+                Um plano estratégico tem como objetivo principal fornecer direcionamento comum a ser seguido por toda a organização, identificando
+                responsabilidades, garantindo alinhamento e oferecendo meios para medição do sucesso da estratégia de modo focado, visando o alcance dos
+                objetivos institucionais e a maximização dos resultados. Com o objetivo de oferecer maior transparência e maior eficiência na gestão do plano,
+                bem como alinhas os objetivos da TI com os objetivos estratégicos da SECTI, foi desenvolvido
+                um sistema web que auxilar os gestores e a governança, no acompanhamento das ações e atividades do Plano 2017( marcos de acompanhamento e
+                evidências), o SGPLAN.
+              </p>
+              <p class="fi">
+                A ferramenta disponibiliza informações rápidas e objetivas sobre as ações e seus respectivos status de entrega, relatórios estão sendo implementados conforme a necessidade dos gestores. Outras funcionalidades como um DashBoard com indicadores estão sendo construídas. O sistema foi construído utilizando a linguagem Ruby v. 2.3.0, e Banco de Dados PostgreSQL v. 9.6. O front-end da aplicação foi construído utilizando HTML, CSS e JavaScript. O sistema está hospedado em uma máquina virtual utilizando CENTOS no datacenter do ITEC. Para acessar o sistema basta acessar o link http://sgplan.secti.al.gov.br
+              </p>
+              <h4>Notícias relacionadas</h4>
+              <ul>
+                <li><a href="http://www.agenciaalagoas.al.gov.br/noticia/item/18830-palmeira-dos-indios-implanta-sistema-inovador-desenvolvido-pela-secti" target="_blank">http://www.agenciaalagoas.al.gov.br/noticia/item/18830-palmeira-dos-indios-implanta-sistema-inovador-desenvolvido-pela-secti</a></li>
+                <li><a href="http://www.agenciaalagoas.al.gov.br/noticia/item/15182-sistema-de-gestao-facilita-monitoramento-das-acoes-do-governo" target="_blank">http://www.agenciaalagoas.al.gov.br/noticia/item/15182-sistema-de-gestao-facilita-monitoramento-das-acoes-do-governo</a></li>
+              </ul>
+  
+              <div class="carousel-wrapper">
+                <div class="t">
+                  <a class="carousel-item" href="full-header.html#one!"><img src="img/portfolio/sgplan/banner1.PNG" crossOrigin="anonymous"></a>
+                  <a class="carousel-item" href="full-header.html#two!"><img src="img/portfolio/sgplan/banner2.PNG" crossOrigin="anonymous"></a>
+                  <a class="carousel-item" href="full-header.html#three!"><img src="img/portfolio/sgplan/banner3.PNG" crossOrigin="anonymous"></a>
+                  <a class="carousel-item" href="full-header.html#four!"><img src="img/portfolio/sgplan/banner5.jpg"></a>
+                  <a class="carousel-item" href="full-header.html#four!"><img src="img/portfolio/sgplan/banner6.jpg"></a>
+                </div>
+              </div>
+            </div>
+            <div class="gallery-action">
+              <a class="btn-floating btn-large waves-effect waves-light"><i class="material-icons">favorite</i></a>
+            </div>
+          </div>
+        </div>
+      </div>
+  
+    </div>
+  
+  </div><!-- /.container -->
+</div>
 
-</div><!-- /.container -->
+
 
 <br><br>
 
