Change site style

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 <body>
 <!-- NAV -->
 <div class="navbar-fixed">
-  <nav class="blue-theme-dark darken-2" role="navigation">
+  <nav class="grey darken-4" role="navigation">
     <div class="nav-wrapper container">
-      <a class="light">
+      <!-- <a class="light">
         <img width="20px" class="nyw-logo hide-on-small-only" src="./images/keyboardsvg.svg"></img>
-      </a>
+      </a> -->
       <a id="logo-container" href="#" class="brand-logo">
-        Tech-Solver $_>
+        $>_ TechSolver 
       </a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#sobre" class="js-scroll-trigger">About</a></li>
@@ -83,9 +83,9 @@
             <div class="profile-img">
               <img class="responsive-img circle center-align" src="img/profile2.png">
             </div>
-            <br><br><br>
+            <br><br>
             <h2>Nywton Barros</h2>
-            <br>
+    
 
             <div>
               <i class="material-icons">important_devices</i>
@@ -104,9 +104,9 @@
                     I built IS, websites and mobile apps for the government and i've worked on some brazilian and american agencies</p> -->
           </div>
           <p class="center">
-            <a href="https://docs.google.com/document/d/135b5J4Ju_CEQRQ-WmJrzrdQa0RNckUHMlQBI3TqIQ9w/edit?usp=sharing" target="_blank" class="waves-effect waves-light btn btn-flat blue-theme-dark darken-2 white-text"><i class="material-icons left">business</i> Curriculum (CV)</a>
+            <a href="https://docs.google.com/document/d/135b5J4Ju_CEQRQ-WmJrzrdQa0RNckUHMlQBI3TqIQ9w/edit?usp=sharing" target="_blank" class="waves-effect waves-light btn btn-flat blue-grey darken-2 white-text"><i class="material-icons left">business</i> Curriculum (CV)</a>
             <!-- <a href="#contato" class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text  hide-on-small-only	"><i class="material-icons left">email</i> Contact</a> -->
-            <a target="_blank" href="https://wa.me/+5582991295880?text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento." class="waves-effect waves-light btn btn-flat blue accent-3 lighten-3 white-text">
+            <a target="_blank" href="https://wa.me/+5582991295880?text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento." class="waves-effect waves-light btn btn-flat green accent-3 white-text">
               <span style="display: flex; justify-content: center; align-items: center;">
                 <img src="./img/icons/whatsapp.png" width="24px" alt="">
                 <span style="margin-left: 10px;">
@@ -121,7 +121,6 @@
         </div>
       </div>
     </div>
-'
 
   </div>
 </div>
@@ -134,7 +133,7 @@
   <div class="section-title center-align">
     <h4 id="habilidades"><i class="material-icons">code</i> Skills</h4>
   </div>
-  <div class="card blue-theme darken-2 white-text z-depth-4">
+  <div class="card grey darken-3 white-text z-depth-4">
     <div class="card-content">
       <div class="row">
         <div class="col m6 s12">
