--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <link rel="icon" type="image/png" href="favicon.ico" />
   <link rel="icon" type="image/gif" href="favicon.ico" />
 
-  <meta name="theme-color" content="#0092c4" />
+  <meta name="theme-color" content="#212121" />
 </head>
 <body>
 <!-- NAV -->
