--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
         <img width="20px" class="nyw-logo hide-on-small-only" src="./images/keyboardsvg.svg"></img>
       </a> -->
       <a id="logo-container" href="#" class="brand-logo">
-        $>_ TechSolver 
+        $> TechSolver 
       </a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#sobre" class="js-scroll-trigger">About</a></li>
+        <li><a href="#sobre" class="js-scroll-trigger">About Me</a></li>
         <li><a href="#habilidades" class="js-scroll-trigger">Skills</a></li>
         <li><a href="#experiencia" class="js-scroll-trigger">Experience</a></li>
          <!-- <li><a href="#portfolio" class="js-scroll-trigger">Projects</a></li> -->
-        <li><a href="#contato" class="js-scroll-trigger">Contact</a></li>
+         <li><a target="_blank" href="https://wa.me/+5582991295880?text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento.">Contact</a></li>
       </ul>
 
       <ul id="nav-mobile" class="side-nav">
@@ -62,7 +62,7 @@
         <li><a href="#habilidades" class="js-scroll-trigger">Skills</a></li>
         <li><a href="#experiencia" class="js-scroll-trigger">Experience</a></li>
         <li><a href="#portfolio" class="js-scroll-trigger">Portfolio</a></li>
-        <li><a href="#contato" class="js-scroll-trigger">Contact</a></li>
+        <li><a target="_blank" href="https://wa.me/+5582991295880?text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20um%20or%C3%A7amento.">Contact</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
