Change site title from 'TechSolver' to 'Software Designer'

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <!-- Logo - Now Purple with Avatar/Icon -->
             <a href="#hero" class="text-2xl font-extrabold text-nu-purple-400 hover:text-nu-purple-300 transition duration-300 flex items-center">
                 <i class="fa-solid fa-cube text-3xl mr-3"></i>
-                $&gt; TechSolver
+                Software Designer
             </a>
             
             <!-- Desktop Nav Links - Only Projects and Contact remain, with vertical alignment fixed -->
