Update title and links in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nywton Barros | TechSolver - High-Impact Development</title>
+    <title>Nywton Barros | Software Engineer - High-Impact Development</title>
     <!-- Load Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Load Inter Font -->
@@ -186,7 +186,7 @@
             <div class="glass-card grid grid-cols-1 lg:grid-cols-2 gap-10 p-8 lg:p-12 items-center transition duration-300 hover:shadow-nu-purple-500/30">
                  <!-- Image -->
                 <div class="rounded-lg overflow-hidden border border-gray-700 h-64 lg:h-80 lg:order-last">
-                    <img src="https://placehold.co/800x600/101010/820ad1?text=Doe%2B+Mobile+App" alt="Mobile application interface concept" class="w-full h-full object-cover">
+                    <img src="https://github.com/nywton/resume/blob/master/img/doe.jpg?raw=true" alt="Doe+ Mobile App Screenshot" class="w-full h-full object-cover">
                 </div>
                 <!-- Content -->
                 <div class="lg:order-first">
@@ -366,15 +366,15 @@
                             <!-- LinkedIn -->
                             <div class="flex items-center space-x-4">
                                 <i class="fab fa-linkedin-in text-xl text-nu-purple-400 w-6"></i>
-                                <a href="https://linkedin.com/in/nywtonbarros" target="_blank" class="text-gray-300 hover:text-nu-purple-400 transition">
-                                    linkedin.com/in/nywtonbarros
+                                <a href="https://www.linkedin.com/in/nywton-barros-23a805105/" target="_blank" class="text-gray-300 hover:text-nu-purple-400 transition">
+                                    linkedin.com/in/nywton-barros-23a805105
                                 </a>
                             </div>
                             <!-- GitHub -->
                             <div class="flex items-center space-x-4">
                                 <i class="fab fa-github text-xl text-nu-purple-400 w-6"></i>
-                                <a href="https://github.com/nywtonbarros" target="_blank" class="text-gray-300 hover:text-nu-purple-400 transition">
-                                    github.com/nywtonbarros
+                                <a href="https://github.com/nywton" target="_blank" class="text-gray-300 hover:text-nu-purple-400 transition">
+                                    github.com/nywton
                                 </a>
                             </div>
                         </div>
